@@ -7,8 +7,9 @@ cutting a release (tagging in the source code repository, and running
  * Makefile
 
  * Build description files:
-   * tuxpaint.spec (RPM package)
+   * tuxpaint.spec (Linux RPM package)
    * macos/Info.plist (macOS build)
+   * win32/resources.rc (Windows mingw/msys build)
 
  * Documentation
    (For HTML variants, be sure to run "make" in "docs/", to
