@@ -1,5 +1,5 @@
-.\" tuxpaint.1 - 2020.03.28
-.TH TUXPAINT 1 "28 March 2020" "0.9.24" "Tux Paint"
+.\" tuxpaint.1 - 2020.04.10
+.TH TUXPAINT 1 "10 April 2020" "0.9.24" "Tux Paint"
 .SH NAME
 tuxpaint -- "Tux Paint", a drawing program for young children.
 
