@@ -8,7 +8,7 @@ http://www.tuxpaint.org/
 
 $Id$
 
-2020.April.1 (0.9.24)
+2020.April.10 (0.9.24)
   * New tools
     ---------
     * Fill
@@ -34,6 +34,9 @@ $Id$
     * Wrapped some debug output in "#ifdef DEBUG" tests,
       and made sure some warnings and errors were going to
       STDERR, rather than STDOUT.
+
+    * Updates to build for Windows (using mingw/msys)
+      TOYAMA Shin-ichi <shin1@wmail.plala.or.jp>
 
   * Other Improvements
     ------------------
